initial : initial commit

--- a/index.html
+++ b/index.html
@@ -46,13 +46,26 @@
         </div>
     </div>
     <div class="footer">
-        <div class="projs">
-            <h3>proj1</h3>
+        <div class="projs first">
+            <div class="top">
+                <div class="image">
+                    <img src="/images/laundrivrlogo.png" alt="">
+                </div>
+                    <h2>Diversidy</h2>
+                <div class="title">
+
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="desc">
+                    <p>Hello my name is tubbynuget.</p>
+                </div>
+            </div>
         </div>
-        <div class="projs">
+        <div class="projs second">
             <h3>proj2</h3>
         </div>
-        <div class="projs">
+        <div class="projs third">
             <h3>proj3</h3>
         </div>
 
