--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <li>Links</li>
                         <a href="https://github.com/aaron10l">Github</a>
                         <a href="https://linkedin.com/in/aaronalvarez513/">Linkedin</a>
-                        <a href="https://github.com/aaron10l">Projects</a>
+                        <a href="/images/Aaron_Alvarez_Resume.pdf">Resume</a>
                     </div>
                     <div class="socials">
                         <li>Socials</li>
@@ -48,17 +48,17 @@
     <div class="footer">
         <div class="projs first">
             <div class="top">
-                <div class="image">
-                    <img src="/images/laundrivrlogo.png" alt="">
-                </div>
-                    <h2>Diversidy</h2>
+                    <h2>Laundrivr</h2>
                 <div class="title">
 
                 </div>
             </div>
             <div class="bottom">
+                <div class="image">
+                    <img src="/images/laundrivrlogo.png" alt="">
+                </div>
                 <div class="desc">
-                    <p>Hello my name is tubbynuget.</p>
+                    <p>An app that makes managing laundry easy. Available on the iOS App Store.</p>
                 </div>
             </div>
         </div>
