--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="footer">
         <div class="projs first">
             <div class="top">
-                    <h2>Laundrivr</h2>
+                    <a href="https://laundrivr.com">Laundrivr</a>
                 <div class="title">
 
                 </div>
@@ -63,10 +63,20 @@
             </div>
         </div>
         <div class="projs second">
-            <h3>proj2</h3>
-        </div>
-        <div class="projs third">
-            <h3>proj3</h3>
+            <div class="top">
+                    <a href="https://github.com/aaron10l/diversidy">Diversidy</a>
+                <div class="title">
+
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="image">
+                    <img src="/images/diversidylogo.png" alt="">
+                </div>
+                <div class="desc">
+                    <p>A web app that helps you diversify all your investments.</p>
+                </div>
+            </div>
         </div>
 
     </div>
