feat : added mobile responsiveness

--- a/aboutme.html
+++ b/aboutme.html
@@ -22,6 +22,7 @@
 html {font-family:"Binchotan_Sharp";}
 
 body{
+	height: 100%;
     background-image: linear-gradient(to bottom right, black, #292827);
 }
 
@@ -116,3 +117,4 @@ details>summary+div {margin:0.5em;}
 
 </body>
 </html>
+
